--- a/Views/css/login-styles.css
+++ b/Views/css/login-styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap');
+/*@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap');*/
 
 :root{
     --background: #e4e4e4;
@@ -7,7 +7,7 @@
     --success: #00BA88;
     --error: #FA3C6A;
     --light-gray: #F0F0F0;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Helvetica', sans-serif;
 
 }
 
@@ -30,18 +30,18 @@ a:hover{
 
 input {
     font-size: 1rem;
-    padding: 20px;
+    padding: 10px;
     background-color: var(--light-gray);
     border: none;
-    border-radius: 8px;
+    border-radius: 4px;
     outline: none;
 }
 
 .input--error {
     font-size: 1rem;
-    padding: 20px;
+    padding: 10px;
     background-color: var(--light-gray);
-    border-radius: 8px;
+    border-radius: 4px;
     border: 2px solid red;
 }
 
@@ -60,7 +60,7 @@ input {
     align-items: center;
     margin: 0px auto 0px auto;
     height: 100vh;
-    background-color: #2d43b4;
+    /*background-color: #2d43b4;*/
 }
 
 .tabs {
@@ -75,20 +75,6 @@ input {
     padding-bottom: 4px;
     padding-top: 16px;
     border-bottom: solid var(--light-gray);
-}
-
-.tabs__tab--selected {
-    color: var(--primary);
-    font-size: 1.5rem;
-    background-color: var(--light-gray);
-    border-radius: 32px;
-    padding: 8px 16px 8px 16px;
-}
-
-.tabs__tab {
-    font-size: 1.5rem;
-    border-radius: 32px;
-    padding: 8px 16px 8px 16px;
 }
 
 .todo {
@@ -137,8 +123,8 @@ input {
     flex-direction: column;
     margin: auto;
     padding: 24px 24px 24px 24px;
-    border-radius: 2rem;
-    border-width: 2px;
+    border-radius: 4px;
+    border-width: 4px;
     background-color: white;
     border-style: solid;
     border-color: var(--light-gray);
