--- a/Views/css/main-styles.css
+++ b/Views/css/main-styles.css
@@ -8,7 +8,7 @@ body {
     height: 100vh;
     width: 100vw;
     margin: 0;
-    background-color: grey;
+    background-color: #ffffff;
 }
 
 
@@ -46,6 +46,12 @@ body {
 
 
 .nav-central-top{
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    overflow: hidden;
+    padding-block: 2px;
+    padding-inline: 5px;
     height: 6vh;
     width: 100%;
     background-color: burlywood;
