--- a/Views/css/mainButtonStyles.css
+++ b/Views/css/mainButtonStyles.css
@@ -2,7 +2,6 @@
 .button-main {
 
     height: 2.5rem;
-    width: 90%;
     background-image: linear-gradient(#42A1EC, #0070C9);
     border: 1px solid #0077CC;
     border-radius: 4px;
@@ -12,7 +11,7 @@
     direction: ltr;
     display: block;
     font-family: "SF Pro Text","SF Pro Icons","AOS Icons","Helvetica Neue",Helvetica,Arial,sans-serif;
-    font-size: 17px;
+    font-size: 1em;
     font-weight: 400;
     letter-spacing: -.022em;
     line-height: 1.47059;
@@ -25,6 +24,10 @@
     -webkit-user-select: none;
     touch-action: manipulation;
     white-space: nowrap;
+}
+
+.width {
+    width: 90%;
 }
 
 .button-main:disabled {
