--- a/Views/css/main-button-styles.css
+++ b/Views/css/main-button-styles.css
@@ -1,34 +1,31 @@
-
 .button-main {
 
-    height: 2.5rem;
     background-image: linear-gradient(#42A1EC, #0070C9);
-    border: 1px solid #0077CC;
     border-radius: 4px;
     box-sizing: border-box;
+    box-shadow: inset 0 0px 4px 1px #626262;
+    min-height: 30px;
     color: #FFFFFF;
     cursor: pointer;
-    direction: ltr;
     display: block;
-    font-family: "SF Pro Text","SF Pro Icons","AOS Icons","Helvetica Neue",Helvetica,Arial,sans-serif;
-    font-size: 1em;
+    font-family: system-ui,"Helvetica Neue","Helvetica,Arial",sans-serif;
+    font-size: 0.8em;
     font-weight: 400;
     letter-spacing: -.022em;
     line-height: 1.47059;
     min-width: 30px;
-    overflow: visible;
     padding: 4px 6px;
     text-align: center;
+    overflow: hidden;
+    text-overflow: ellipsis;
     vertical-align: baseline;
     user-select: none;
-    -webkit-user-select: none;
-    touch-action: manipulation;
     white-space: nowrap;
 }
-
 .width {
     width: 90%;
 }
+
 
 .button-main:disabled {
     cursor: default;
@@ -45,9 +42,10 @@
     background-image: linear-gradient(#3D94D9, #0067B9);
     border-color: #006DBC;
     outline: none;
+    box-shadow: inset 0 0px 4px 1px #626262;
 }
 
 .button-main:focus {
-    box-shadow: rgba(131, 192, 253, 0.5) 0 0 0 3px;
+    box-shadow: rgba(131, 192, 253, 0.5) 0 0 0 1px;
     outline: none;
 }
