--- a/Views/css/main-styles.css
+++ b/Views/css/main-styles.css
@@ -8,8 +8,10 @@ body {
     height: 100vh;
     width: 100vw;
     margin: 0;
-    background-color: #ffffff;
+    background-color: #262626;
 }
+
+
 
 
 .container-hero{
@@ -21,27 +23,50 @@ body {
 .nav-left {
     display: flex;
     flex-direction: column;
-    width: 15vw;
-    background-color: beige;
+    align-items: center;
+    height: 89vh;
+    width: 20vw;
+    padding-block: 1rem;
+    gap: 1rem;
+    background: linear-gradient(to bottom,
+        rgba(77,77,77,1) 0%, rgba(54,54,54,1) 100%);
 }
 
 
-.nav-left-top{
+.nav-left-upper{
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-    height: 33%;
-    background-color: yellow;
     align-items: center;
+    height: 33%;
+    width: 90%;
     gap: 0.5rem;
     padding-block: 0.5em;
+    overflow: hidden;
+    background-color: #5e5e5e;
+    border-radius: 0.5rem;
+    /*border: 2px solid rgb(95 61 61);*/
+    /*border-image: linear-gradient(to right, rgba(66,162,236,1) 0%, rgba(0,111,201,1) 50%, rgba(188,224,2368,1) 100%);*/
+    box-shadow: inset 0 0 4px 3px #42A1ECFF;
+}
+
+
+.nav-left-bottom {
+    height: 77%;
+    width: 90%;
+    padding-block: 0.5em;
+    background-color: #5e5e5e;
+    border-radius: 0.5rem;
+    /*border: 2px solid rgb(95 61 61);*/
+    box-shadow: inset 0 0 4px 3px #42A1ECFF;
 }
 
 
 .container-central{
     display: flex;
     flex-direction: column;
-    width: 55vw;
+    width: 50vw;
+    background: linear-gradient(130deg,#ff7a18,#af002d 41.07%,#319197 76.05%);
 }
 
 
@@ -54,19 +79,28 @@ body {
     padding-inline: 5px;
     height: 6vh;
     width: 100%;
-    background-color: burlywood;
+    overflow: hidden;
+    background: linear-gradient(to bottom,
+    rgba(77,77,77,1) 0%, rgba(54,54,54,1) 100%);
 }
 
 
 .nav-right {
+    /*display: flex;*/
+    /*flex-direction: column;*/
+    /*align-items: center;*/
     width: 30vw;
-    background-color: #bb54cb;
-    overflow: auto;
+    background-color: #5e5e5e;
+    clip-path: content-box;
 }
 
 
 .nav-bottom{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 100vw;
     height: 11vw;
-    background-color: hotpink;
+    background: linear-gradient(to bottom,
+    rgba(77,77,77,1) 0%, rgba(54,54,54,1) 100%);
 }
