--- a/Views/css/playlist-styles.css
+++ b/Views/css/playlist-styles.css
@@ -9,10 +9,11 @@
 }
 
 .img {
-    width: 100% ;
+   /* width: 100% ;
     flex-shrink: 0;
     display: block ;
-    object-fit: cover ;
+    object-fit: cover ;*/
+    border-radius: 4px;
 }
 
 .list {
@@ -32,16 +33,15 @@
 
 
 .player__img {
-    width: 3.22em ;
-    height: 3.22em ;
+    height: 70px;
+    width: 70px;
 }
 
-
-.player__img--absolute {
-    top: 1.4em ;
-    left: 1.2em ;
-    position: absolute ;
-}
+/*.player__img--absolute {*/
+/*    top: 1.4em ;*/
+/*    left: 1.2em ;*/
+/*    position: absolute ;*/
+/*}*/
 
 
 .list_play_icon {
@@ -64,16 +64,25 @@
 
 
 .player__title {
-    font-size: .7em ;
+    font-size: .8em ;
     font-weight: bold ;
-    color: #00000086 ;
+    color: #f6f6f6;
 }
 
 .player__playlist {
+    display: flex;
+    flex-direction: column;
+    flex-shrink: 1;
     height: 100% ;
-    overflow: auto;
-    padding: 1.05em .9em 0 1.2em ;
+    padding-block: 1rem;
+    padding-inline: 1rem;
     font-family: 'Quicksand', sans-serif ;
+    background: linear-gradient(to bottom,
+    rgba(77,77,77,1) 0%, rgba(54,54,54,1) 100%);
+    border-radius: 0.5rem;
+    box-shadow: inset 0 0 4px 3px #42A1ECFF;
+    overflow: hidden;
+
 }
 
 .player__song {
@@ -81,21 +90,21 @@
     display: flex ;
     align-items: center;
     margin-bottom: .5em ;
-    padding-bottom: .7em ;
+    padding: .2em 0.4em .3em 0.3em;
     border-bottom: .1em solid #d8d8d859 ;
+    border-radius: 6px;
+    background-color: #5e5e5e;
 }
-.player__song .player__context {
-    line-height: 1.5 ;
-    margin-left: .65em ;
-}
+
 .player__song-name {
-    font-size: .88em ;
+    font-size: 1.1em ;
+    color: #7babec;
 }
 .player__song-time {
     margin-left: 25px;
     font-size: .65em ;
     font-weight: bold ;
-    color: #00000079 ;
+    color: #F6F6F6FF ;
     height: fit-content ;
     align-self: flex-end ;
 }
