--- a/Views/css/main-styles.css
+++ b/Views/css/main-styles.css
@@ -1,3 +1,10 @@
+:root {
+    --background-main: linear-gradient(to bottom,
+                        rgba(77,77,77,1) 0%, rgba(54,54,54,1) 100%);
+
+    --background-temp: linear-gradient(130deg,#ff7a18,#af002d 41.07%,#319197 76.05%);
+}
+
 * {
     box-sizing: border-box;
 }
@@ -10,8 +17,6 @@ body {
     margin: 0;
     background-color: #262626;
 }
-
-
 
 
 .container-hero{
@@ -28,8 +33,7 @@ body {
     width: 20vw;
     padding-block: 1rem;
     gap: 1rem;
-    background: linear-gradient(to bottom,
-        rgba(77,77,77,1) 0%, rgba(54,54,54,1) 100%);
+    background: var(--background-main);
 }
 
 
@@ -45,8 +49,6 @@ body {
     overflow: hidden;
     background-color: #5e5e5e;
     border-radius: 0.5rem;
-    /*border: 2px solid rgb(95 61 61);*/
-    /*border-image: linear-gradient(to right, rgba(66,162,236,1) 0%, rgba(0,111,201,1) 50%, rgba(188,224,2368,1) 100%);*/
     box-shadow: inset 0 0 4px 3px #42A1ECFF;
 }
 
@@ -57,7 +59,6 @@ body {
     padding-block: 0.5em;
     background-color: #5e5e5e;
     border-radius: 0.5rem;
-    /*border: 2px solid rgb(95 61 61);*/
     box-shadow: inset 0 0 4px 3px #42A1ECFF;
 }
 
@@ -66,13 +67,13 @@ body {
     display: flex;
     flex-direction: column;
     width: 50vw;
-    background: linear-gradient(130deg,#ff7a18,#af002d 41.07%,#319197 76.05%);
+    background: var(--background-temp);
 }
 
 
 .nav-central-top{
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
     align-items: center;
     overflow: hidden;
     padding-block: 2px;
@@ -80,15 +81,11 @@ body {
     height: 6vh;
     width: 100%;
     overflow: hidden;
-    background: linear-gradient(to bottom,
-    rgba(77,77,77,1) 0%, rgba(54,54,54,1) 100%);
+    background: var(--background-main);
 }
 
 
 .nav-right {
-    /*display: flex;*/
-    /*flex-direction: column;*/
-    /*align-items: center;*/
     width: 30vw;
     background-color: #5e5e5e;
     clip-path: content-box;
@@ -101,6 +98,5 @@ body {
     align-items: center;
     width: 100vw;
     height: 11vw;
-    background: linear-gradient(to bottom,
-    rgba(77,77,77,1) 0%, rgba(54,54,54,1) 100%);
+    background: var(--background-main);
 }
