--- a/Views/css/main-styles.css
+++ b/Views/css/main-styles.css
@@ -2,6 +2,11 @@
     --background-main: linear-gradient(to bottom,
                         rgba(77,77,77,1) 0%, rgba(54,54,54,1) 100%);
 
+    --background-main-3x: linear-gradient(to bottom,
+        rgba(77,77,77,1) 0%, rgba(54,54,54,1) 15%, rgba(54,54,54,1) 85%, rgba(77,77,77,1) 100%);
+
+
+    --bottom-bgr-main: rgba(54,54,54,1);
     --background-temp: linear-gradient(130deg,#ff7a18,#af002d 41.07%,#319197 76.05%);
 }
 
@@ -89,14 +94,15 @@ body {
     width: 30vw;
     background-color: #5e5e5e;
     clip-path: content-box;
+    background: var(--background-main);
 }
 
 
-.nav-bottom{
+.foot-bottom{
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100vw;
     height: 11vw;
-    background: var(--background-main);
+    background: var(--background-main-3x);
 }
