--- a/Views/css/playlist-styles.css
+++ b/Views/css/playlist-styles.css
@@ -66,14 +66,15 @@
     padding-block: 1rem;
     padding-inline: 1rem;
     font-family: 'Quicksand', sans-serif ;
-    background: linear-gradient(to bottom,
-    rgba(77,77,77,1) 0%, rgba(54,54,54,1) 100%);
+    /*background: linear-gradient(to bottom,
+    rgba(77,77,77,1) 0%, rgba(54,54,54,1) 100%);*/
     border-radius: 0.5rem;
     box-shadow: inset 0 0 4px 3px #42A1ECFF;
     overflow: hidden;
 
 }
 
+/*celý kontent <li>*/
 .player__song {
     gap: 0 7px ;
     display: flex ;
@@ -85,18 +86,15 @@
     background-color: #5e5e5e;
 }
 
-.player__song-name {
+.player__track-name {
     font-size: 1.1em ;
     color: #7babec;
 }
-.player__song-time {
+.player__track-time {
     margin-left: 25px;
     font-size: .65em ;
     font-weight: bold ;
     color: #F6F6F6FF ;
     height: fit-content ;
     align-self: flex-end ;
-}
-.audio {
-    display: none;
 }
