--- a/Views/css/playlist-styles.css
+++ b/Views/css/playlist-styles.css
@@ -12,72 +12,48 @@
     border-radius: 4px;
 }
 
-.list {
-    margin: 0 ;
-    padding: 0 ;
-    list-style-type: none ;
-}
-.flex {
-    display: flex ;
-    align-items: center ;
-    justify-content: space-between ;
-}
 
-.uppercase{
-    text-transform: uppercase ;
-}
-
-
-.player__img {
+.playlist-img {
     height: 70px;
     width: 70px;
 }
 
-.list_play_icon {
+.list-play-icon {
     min-height: var(--size-play-button);
 }
 
 
-.list_play_icon:hover {
+.list-play-icon:hover {
     cursor: pointer;
 }
 
-
-.list_play_button {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: var(--size-play-button);
-    width: var(--size-play-button);
-    height: var(--size-play-button);
-    visibility: hidden;
-}
-
-
-.player__title {
-    font-size: .8em ;
-    font-weight: bold ;
-    color: #f6f6f6;
-}
-
-
-.player__playlist {
+.playlist-main {
     display: flex;
     flex-direction: column;
     flex-shrink: 1;
     height: 100% ;
     padding-block: 1rem;
-    padding-inline: 1rem;
+    padding-inline: 0.5rem;
     font-family: 'Quicksand', sans-serif ;
     border-radius: 0.5rem;
     box-shadow: inset 0 0 4px 3px #42A1ECFF;
-    overflow: hidden;
+    overflow-x: hidden;
+}
 
+
+.mask {
+    mask-clip: fill-box;
+}
+
+.div-for-li {
+    overflow: overlay;
+    margin: 1px;
 }
 
 /*celý kontent <li>*/
-.player__song {
-    gap: 0 7px ;
+.playlist-item {
+    box-sizing: content-box;
+    gap: 0 9px ;
     display: flex;
     align-items: center;
     margin-bottom: .5em ;
@@ -85,20 +61,62 @@
     border-bottom: .1em solid #d8d8d859 ;
     border-radius: 6px;
     background-color: #5e5e5e;
+    overflow: hidden;
+}
+
+.song-text-area {
+    display: flex;
+    flex-direction: column;
+}
+
+.inlineFlex {
+    display: flex;
+    justify-content: space-between;
+    width: 200px;
+}
+
+.track-name {
+    font-size: 0.9em ;
+    color: #e8c645;
+    font-family: "Franklin Gothic Book";
+    text-shadow: 1px 1px #2d2c2c;
+}
+
+table {
+    white-space: nowrap;
+    width: 240;
+}
+
+td {
+    border-color: #006DBC;
+}
+
+.td-title {
+    font-size: 0.8em ;
+    color: #f3f3f3;
+    font-family: "Franklin Gothic Book";
+    margin-top: 2px;
 }
 
 
-.player__track-name {
-    font-size: 1.1em ;
-    color: #7babec;
-}
-
-
-.player__track-time {
+.td-track-time {
     margin-left: 25px;
-    font-size: .8em ;
-    font-weight: bold ;
-    color: #F6F6F6FF ;
+    margin-top: 2px;
+    font-size: .7em ;
+    color: #f3f3f3;
     height: fit-content ;
-    align-self: flex-end ;
+    align-self: flex-end;
+    font-family: system-ui;
+    color: #42A1EC;
+    letter-spacing: 1px;
+}
+
+ul {
+    display: block;
+    list-style-type: none;
+    margin-block-start:0em;
+    margin-block-end:0em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    padding-inline-start: 0px;
 }
