prohodil Pauza za Play, mensi upravy, mozna stihnu i porovnani tokenu (musim pro kafe:)

--- a/Views/css/playlist-styles.css
+++ b/Views/css/playlist-styles.css
@@ -30,9 +30,9 @@
 .playlist-main {
     display: flex;
     flex-direction: column;
-    flex-shrink: 1;
     height: 100% ;
-    padding-block: 1rem;
+    padding-top: 0.5rem;
+    padding-bottom: 0.3rem;
     padding-inline: 0.5rem;
     font-family: 'Quicksand', sans-serif ;
     border-radius: 0.5rem;
