--- a/Views/css/main-styles.css
+++ b/Views/css/main-styles.css
@@ -36,7 +36,8 @@ body {
     align-items: center;
     height: 89vh;
     width: 20vw;
-    padding-block: 1rem;
+    padding-top: 0.3rem;
+    padding-bottom: 0.3rem;
     gap: 1rem;
     background: var(--background-main);
 }
@@ -57,8 +58,17 @@ body {
     box-shadow: inset 0 0 4px 3px #42A1ECFF;
 }
 
+.div-left-upper {
+
+}
+
 
 .nav-left-bottom {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    overflow: hidden;
     height: 77%;
     width: 90%;
     padding-block: 0.5em;
@@ -72,7 +82,7 @@ body {
     display: flex;
     flex-direction: column;
     width: 50vw;
-    background: var(--background-temp);
+    /*background: var(--background-temp);*/
 }
 
 
@@ -83,12 +93,19 @@ body {
     overflow: hidden;
     padding-block: 2px;
     padding-inline: 5px;
-    height: 6vh;
+    height: 8%;
     width: 100%;
     overflow: hidden;
     background: var(--background-main);
 }
 
+div.central-bottom
+{
+    width: inherit;
+    height: 91%;
+    content: url("/Playlist/images/colorful-headphones.jpg");
+    background-size: cover;
+}
 
 .nav-right {
     display: flex;
@@ -96,6 +113,8 @@ body {
     width: 30vw;
     background-color: #5e5e5e;
     background: var(--background-main);
+    padding-top: 0.3rem;
+    padding-bottom: 0.3rem;
 }
 
 
