--- a/Views/css/login-styles.css
+++ b/Views/css/login-styles.css
@@ -9,9 +9,11 @@
     font-family: 'Helvetica', sans-serif;
 }
 
+
 * {
     box-sizing: border-box;
 }
+
 
 body {
     min-width: 850px;
@@ -23,17 +25,18 @@ a {
     color: var(--primary);
     font-weight: 400;
     text-decoration: none;
-    transition: text-decoration 5s ease-in-out;
 }
+
 
 p {
     font-size: 0.8rem;
 }
 
+
 a:hover{
     text-decoration: underline;
-   
 }
+
 
 input {
     font-family: "Century Gothic";
@@ -44,6 +47,7 @@ input {
     border-radius: 4px;
     outline: none;
 }
+
 
 .input--error {
     font-size: 0.8rem;
@@ -71,26 +75,28 @@ input {
 }
 
 
+
 .form {
+    flex-direction: column;
+    justify-content: center;
     z-index: 100;
     min-width: 33vw;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
     gap: 1rem;
     margin: auto;
     padding: 24px 24px 24px 24px;
-    border-radius: 4px;
     border-width: 4px;
-    background-color: #5e5e5e;
-    border-radius: 0.5rem;
+    background-color: var(--bg-main-gray);
     box-shadow: inset 0 0 4px 3px #42A1ECFF;
+    border-radius: 0.5rem;
 }
+
 
 .form__footer {
     display: flex;
     justify-content: center;
 }
+
 
 .form__error-message{
     font-size: 0.8em;
@@ -98,6 +104,7 @@ input {
     margin-bottom: 0;
     color: var(--error);
 }
+
 
 .form__headline {
     font-family: "Century Gothic";
