--- a/Views/css/main-button-styles.css
+++ b/Views/css/main-button-styles.css
@@ -25,7 +25,10 @@ button {
     vertical-align: baseline;
     user-select: none;
     white-space: nowrap;
+    overflow: hidden;
 }
+
+
 .width {
     width: 90%;
 }
