--- a/Views/css/main-styles.css
+++ b/Views/css/main-styles.css
@@ -6,12 +6,16 @@
         rgba(77,77,77,1) 0%, rgba(54,54,54,1) 15%, rgba(54,54,54,1) 85%, rgba(77,77,77,1) 100%);
 
     --bottom-bgr-main: rgba(54,54,54,1);
-    --background-temp: linear-gradient(130deg,#ff7a18,#af002d 41.07%,#319197 76.05%);
+    --background-temp: linear-gradient(130deg,#ff7a18,#af002d 41.07%,#319197 76.05%); /*nepoužívám*/
+    --box-shadow: inset 0 0 4px 3px #42A1ECFF;
+    --bg-main-gray: #5e5e5e;
 }
+
 
 * {
     box-sizing: border-box;
 }
+
 
 body {
     display: flex;
@@ -48,18 +52,21 @@ body {
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
-    height: 33%;
+    height: 22%;
     width: 90%;
-    gap: 0.5rem;
-    padding-block: 0.5em;
+    gap: 0.4rem;
+    padding-block: 3.6em;
     overflow: hidden;
-    background-color: #5e5e5e;
     border-radius: 0.5rem;
-    box-shadow: inset 0 0 4px 3px #42A1ECFF;
+    background-color: var(--bg-main-gray);
+    box-shadow: var(--box-shadow);
 }
 
-.div-left-upper {
 
+.div-left-upper {
+    display: contents;
+    margin: 1px;
+    width: 100%;
 }
 
 
@@ -68,12 +75,12 @@ body {
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
-    overflow: hidden;
-    height: 77%;
+    height: 100%;
     width: 90%;
     padding-block: 0.5em;
-    background-color: #5e5e5e;
     border-radius: 0.5rem;
+    overflow: hidden;
+    background-color: var(--bg-main-gray);
     box-shadow: inset 0 0 4px 3px #42A1ECFF;
 }
 
@@ -90,13 +97,14 @@ body {
     justify-content: space-between;
     align-items: center;
     overflow: hidden;
-    padding-block: 2px;
+    padding-block: 1rem;
     padding-inline: 5px;
     height: 8%;
     width: 100%;
     overflow: hidden;
     background: var(--background-main);
 }
+
 
 div.central-bottom
 {
@@ -106,14 +114,14 @@ div.central-bottom
     background-size: cover;
 }
 
+
 .nav-right {
     display: flex;
     flex-direction: column;
     width: 30vw;
-    background-color: #5e5e5e;
-    background: var(--background-main);
     padding-top: 0.3rem;
     padding-bottom: 0.3rem;
+    background: var(--background-main);
 }
 
 
@@ -125,6 +133,7 @@ div.central-bottom
     height: 11vw;
     background: var(--background-main-3x);
 }
+
 
 .btn-logout-width {
 
