--- a/Views/css/main-styles.css
+++ b/Views/css/main-styles.css
@@ -73,15 +73,20 @@ body {
 .nav-left-bottom {
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
+    /*justify-content: space-evenly;*/
+    /*align-items: baseline;*/
     height: 100%;
     width: 90%;
     padding-block: 0.5em;
+    padding-inline: 0.5rem;
     border-radius: 0.5rem;
-    overflow: hidden;
+    overflow-x: hidden;
     background-color: var(--bg-main-gray);
     box-shadow: inset 0 0 4px 3px #42A1ECFF;
+}
+
+.div-left-bottom {
+    overflow: auto;
 }
 
 
