--- a/Views/css/main-styles.css
+++ b/Views/css/main-styles.css
@@ -2,10 +2,11 @@
     --background-main: linear-gradient(to bottom,
                         rgba(77,77,77,1) 0%, rgba(54,54,54,1) 100%);
 
+    --background-main-invert: linear-gradient(to top,
+                        rgba(77,77,77,1) 0%, rgba(54,54,54,1) 100%);
     --background-main-3x: linear-gradient(to bottom,
         rgba(77,77,77,1) 0%, rgba(54,54,54,1) 15%, rgba(54,54,54,1) 85%, rgba(77,77,77,1) 100%);
 
-    --bottom-bgr-main: rgba(54,54,54,1);
     --background-temp: linear-gradient(130deg,#ff7a18,#af002d 41.07%,#319197 76.05%); /*nepoužívám*/
     --box-shadow: inset 0 0 4px 3px #42A1ECFF;
     --bg-main-gray: #5e5e5e;
@@ -73,20 +74,20 @@ body {
 .nav-left-bottom {
     display: flex;
     flex-direction: column;
-    /*justify-content: space-evenly;*/
-    /*align-items: baseline;*/
     height: 100%;
     width: 90%;
-    padding-block: 0.5em;
-    padding-inline: 0.5rem;
+    padding-block: 0.6em;
+    padding-right: 0.5rem;
+    padding-left: 0.2rem;
     border-radius: 0.5rem;
     overflow-x: hidden;
     background-color: var(--bg-main-gray);
     box-shadow: inset 0 0 4px 3px #42A1ECFF;
 }
 
-.div-left-bottom {
+.nav-left-bottom-overflow {
     overflow: auto;
+    width: 100%;
 }
 
 
@@ -149,4 +150,12 @@ div.central-bottom
 
 #a-logout {
     width: 100%;
+}
+
+
+.disable-select {
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
