--- a/Views/css/playlist-styles.css
+++ b/Views/css/playlist-styles.css
@@ -2,6 +2,9 @@
 
 :root {
     --size-play-button: 40px;
+    --track-time-color: #42A1EC;
+    --track-name-color: #e8c645;
+    --td-title-color: #e5e5e5;
 }
 
 
@@ -82,7 +85,7 @@
 
 .track-name {
     font-size: 0.9em ;
-    color: #e8c645;
+    color: var(--track-name-color);
     font-family: "Franklin Gothic Book";
     text-shadow: 1px 1px #2d2c2c;
 }
@@ -96,7 +99,15 @@ table {
 
 .td-title {
     font-size: 0.8em ;
-    color: #f3f3f3;
+    color: var(--td-title-color);
+    font-family: "Franklin Gothic Book";
+    margin-top: 2px;
+}
+
+
+.td-genre {
+    font-size: 0.8em ;
+    color: #b2b2b2;
     font-family: "Franklin Gothic Book";
     margin-top: 2px;
 }
@@ -106,11 +117,11 @@ table {
     margin-left: 25px;
     margin-top: 2px;
     font-size: .7em ;
-    color: #f3f3f3;
+    /*color: #f3f3f3;*/
     height: fit-content ;
     align-self: flex-end;
     font-family: system-ui;
-    color: #42A1EC;
+    color: var(--track-time-color);
     letter-spacing: 1px;
 }
 
