ladil CSS (funguje) v1

--- a/Views/css/main-button-styles.css
+++ b/Views/css/main-button-styles.css
@@ -4,23 +4,22 @@ button {
 
 .button-main {
 
-    background-image: linear-gradient(#42A1EC, #0070C9);
+    /*font-family: "Helvetica Neue","Helvetica,Arial",system-ui,sans-serif;*/
+    font-family: "Franklin Gothic Book";
+    background-image: var(--btn-main-grad);
     border-radius: 4px;
     box-sizing: border-box;
     box-shadow: inset 0 0px 4px 1px #626262;
     min-height: 30px;
-    color: #FFFFFF;
+    color: var(--text-color);
     cursor: pointer;
     display: block;
-    font-family: system-ui,"Helvetica Neue","Helvetica,Arial",sans-serif;
     font-size: 0.8em;
     font-weight: 400;
-    letter-spacing: -.022em;
     line-height: 1.47059;
     min-width: 30px;
     padding: 4px 6px;
     text-align: center;
-    overflow: hidden;
     text-overflow: ellipsis;
     vertical-align: baseline;
     user-select: none;
@@ -30,7 +29,7 @@ button {
 
 
 .width {
-    width: 90%;
+    width: 91%;
 }
 
 
@@ -39,18 +38,21 @@ button {
     opacity: .3;
 }
 
+
 .button-main:hover {
-    background-image: linear-gradient(#51A9EE, #147BCD);
+    background-image: var(--btn-main-hover);
     border-color: #1482D0;
     text-decoration: none;
 }
 
+
 .button-main:active {
-    background-image: linear-gradient(#3D94D9, #0067B9);
+    background-image: var(--btn-main-active);
     border-color: #006DBC;
     outline: none;
     box-shadow: inset 0 0px 4px 1px #626262;
 }
+
 
 .button-main:focus {
     box-shadow: rgba(131, 192, 253, 0.5) 0 0 0 1px;
