--- a/Views/css/disclosure-styles.css
+++ b/Views/css/disclosure-styles.css
@@ -1,15 +1,3 @@
-:root {
-    --gradient-main-blue: linear-gradient(#42A1EC, #0070C9);
-    --gradient-hover: linear-gradient(#51A9EE, #147BCD);
-    --gradient-active: linear-gradient(#3D94D9, #0067B9) ;
-    --box-shadow-accord: inset 0 0px 2px 1px var(--primary);
-    --box-shadow-accord-focus: rgba(131, 192, 253, 0.5) 0 0 0 1px;
-    --box-shadow-details: 0 .1rem 1rem -.5rem rgba(0,0,0,.4);
-    --text-color: #FFFFFF;
-    --font-family:"Franklin Gothic Book",sans-serif;
-}
-
-
 details {
     font-family: var(--font-family);
     font-size: 0.6em;
@@ -25,15 +13,14 @@ details {
 
 
 summary {
-    padding-left: 30%;
+    padding-left: 26%;
     padding-right: 1rem;
     padding-bottom: 1rem;
     padding-top: 1.1rem;
     display: block;
     color: var(--text-color);
     box-shadow: var(--box-shadow-accord);
-    background: var(--gradient-main-blue);
-    text-overflow: ellipsis;
+    background: var(--btn-main-grad);
     position: relative;
     top:50%;
     cursor: pointer;
@@ -41,18 +28,22 @@ summary {
 }
 
 
-summary h2 {
-    letter-spacing: 1px;
+h2 {
+    font-family: "Orator Std";
+    text-shadow: 1px 1px #2d2c2c;
+
+    font-size: 1.4em;
+    vertical-align: -32%;
 }
 
 
 summary:hover {
-    background: var(--gradient-hover);
+    background: var(--btn-main-hover);
 }
 
 
 summary:active {
-    background: var(--gradient-active);
+    background: var(--btn-main-active);
 }
 
 
@@ -69,7 +60,7 @@ summary:before {
     transition: .25s transform ease;
 }
 
-
+/*FIX Issue 2: Nested block elements in <summary>*/
 summary > * {
     display: inline;
 }
