--- a/Views/css/login-styles.css
+++ b/Views/css/login-styles.css
@@ -1,20 +1,3 @@
-/*@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap');*/
-
-:root {
-    --primary: #0070C9;
-    --success: #00BA88;
-    --error: #FA3C6A;
-    --light-gray: #F0F0F0;
-    --light-blue: #e0f1ff;
-    font-family: 'Helvetica', sans-serif;
-}
-
-
-* {
-    box-sizing: border-box;
-}
-
-
 body {
     min-width: 850px;
     margin: 0px;
@@ -33,6 +16,11 @@ p {
 }
 
 
+p input {
+    vertical-align: -12%;
+}
+
+
 a:hover{
     text-decoration: underline;
 }
@@ -46,15 +34,6 @@ input {
     border: 1px solid cornflowerblue;
     border-radius: 4px;
     outline: none;
-}
-
-
-.input--error {
-    font-size: 0.8rem;
-    padding: 10px;
-    background-color: var(--light-blue);
-    border-radius: 4px;
-    border: 2px solid red;
 }
 
 
@@ -76,11 +55,13 @@ input {
 
 
 
-.form {
+.form-login {
     flex-direction: column;
     justify-content: center;
-    z-index: 100;
-    min-width: 33vw;
+    width: 23vw;
+    height: 62vh;
+    min-width: 294px;
+    min-height: 392px;
     display: flex;
     gap: 1rem;
     margin: auto;
@@ -94,12 +75,21 @@ input {
 
 .form__footer {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    font-family: "Franklin Gothic Book";
+}
+
+
+.form__footer p {
+    margin-top: 0.3em;
+    margin-bottom: 0.3em;
 }
 
 
 .form__error-message{
-    font-size: 0.8em;
+    font-family: "Franklin Gothic Book";
+    font-size: 0.7em;
     margin-top: 0;
     margin-bottom: 0;
     color: var(--error);
