--- a/Views/css/main-styles.css
+++ b/Views/css/main-styles.css
@@ -1,18 +1,3 @@
-:root {
-    --background-main: linear-gradient(to bottom,
-                        rgba(77,77,77,1) 0%, rgba(54,54,54,1) 100%);
-
-    --background-main-invert: linear-gradient(to top,
-                        rgba(77,77,77,1) 0%, rgba(54,54,54,1) 100%);
-    --background-main-3x: linear-gradient(to bottom,
-        rgba(77,77,77,1) 0%, rgba(54,54,54,1) 15%, rgba(54,54,54,1) 85%, rgba(77,77,77,1) 100%);
-
-    --background-temp: linear-gradient(130deg,#ff7a18,#af002d 41.07%,#319197 76.05%); /*nepoužívám*/
-    --box-shadow: inset 0 0 4px 3px #42A1ECFF;
-    --bg-main-gray: #5e5e5e;
-}
-
-
 * {
     box-sizing: border-box;
 }
@@ -34,6 +19,7 @@ body {
     height: 89vh;
 }
 
+/*<!----------------------------- LEVÁ NAVIGACE -------------------------------->*/
 
 .nav-left {
     display: flex;
@@ -54,13 +40,13 @@ body {
     justify-content: space-evenly;
     align-items: center;
     height: 22%;
-    width: 90%;
+    width: 94%;
     gap: 0.4rem;
     padding-block: 3.6em;
     overflow: hidden;
     border-radius: 0.5rem;
     background-color: var(--bg-main-gray);
-    box-shadow: var(--box-shadow);
+    box-shadow: var(--box-shadow-main);
 }
 
 
@@ -75,7 +61,7 @@ body {
     display: flex;
     flex-direction: column;
     height: 100%;
-    width: 90%;
+    width: 94%;
     padding-block: 0.6em;
     padding-right: 0.5rem;
     padding-left: 0.2rem;
@@ -85,11 +71,13 @@ body {
     box-shadow: inset 0 0 4px 3px #42A1ECFF;
 }
 
+
 .nav-left-bottom-overflow {
     overflow: auto;
     width: 100%;
 }
 
+/*<!--------------------------------- CENTRAL ---------------------------------->*/
 
 .container-central{
     display: flex;
@@ -112,6 +100,13 @@ body {
 }
 
 
+/*toto maji vsechny butony v nav-central-top aby vyplnili
+ celou delku anchoru v nemz jsou vnorene*/
+.btn-width {
+    width: 100%;
+}
+
+
 div.central-bottom
 {
     width: inherit;
@@ -120,6 +115,7 @@ div.central-bottom
     background-size: cover;
 }
 
+/*<!----------------------------- PRAVÁ NAVIGACE ------------------------------->*/
 
 .nav-right {
     display: flex;
@@ -130,6 +126,7 @@ div.central-bottom
     background: var(--background-main);
 }
 
+/*<!------------------------------ FOOTER -------------------------------->*/
 
 .foot-bottom {
     display: flex;
@@ -140,22 +137,22 @@ div.central-bottom
     background: var(--background-main-3x);
 }
 
+/*================================== MISC ======================================*/
 
-.btn-logout-width {
-
-    width: 100%;
+.letter-spacing {
+    letter-spacing: 0.02em;
 }
 
-/*/////////////////////////// ID`s //////////////////////////////*/
+/*===================================== ID`s ====================================*/
+
+#a-register {
+    width: 20%;
+}
 
 #a-logout {
-    width: 100%;
+    width: 60%;
 }
 
-
-.disable-select {
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
+#a-logon {
+    width: 20%;
 }
