prejmenoval na login-register-styles.css a stim souvisejici veci (funguje) v1

--- a/Views/css/main-styles.css
+++ b/Views/css/main-styles.css
@@ -39,10 +39,10 @@ body {
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
-    height: 22%;
+    height: 30%;
     width: 94%;
     gap: 0.4rem;
-    padding-block: 3.6em;
+    padding-block: 0.5em;
     overflow: hidden;
     border-radius: 0.5rem;
     background-color: var(--bg-main-gray);
@@ -51,7 +51,12 @@ body {
 
 
 .div-left-upper {
-    display: contents;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    overflow: hidden;
+    row-gap: 0.4rem;
     margin: 1px;
     width: 100%;
 }
