--- a/Views/css/root.css
+++ b/Views/css/root.css
@@ -26,7 +26,7 @@
     --track-time-color: #42A1EC;
     --track-name-color: #e8c645;
     --td-title-color: #e5e5e5;
-    /*login-styles.css*/
+    /*login-register-styles.css*/
     --primary: #0070C9;
     --success: #00BA88;
     --error: #FA3C6A;
