--- a/Views/css/login-register-styles.css
+++ b/Views/css/login-register-styles.css
@@ -45,6 +45,7 @@ input {
     margin-right: auto;
 }
 
+
 .container--center {
     display: flex;
     justify-content: center;
@@ -60,6 +61,24 @@ input {
     justify-content: center;
     width: 23vw;
     height: 62vh;
+    min-width: 294px;
+    min-height: 392px;
+    display: flex;
+    gap: 1rem;
+    margin: auto;
+    padding: 24px 24px 24px 24px;
+    border-width: 4px;
+    background-color: var(--bg-main-gray);
+    box-shadow: inset 0 0 4px 3px #42A1ECFF;
+    border-radius: 0.5rem;
+}
+
+
+.form-register {
+    flex-direction: column;
+    justify-content: center;
+    width: 23vw;
+    height: auto;
     min-width: 294px;
     min-height: 392px;
     display: flex;
