--- a/Views/css/root.css
+++ b/Views/css/root.css
@@ -36,8 +36,10 @@
     --error: #FA3C6A;
     --light-gray: #F0F0F0;
     --light-blue: #e0f1ff;
-}
 
+    /*usracc-modal.css*/
+    --bg-user-modal: linear-gradient(to top, snow 75%, rgb(53, 53, 53) 75%,var(--bg-main-gray) 76%, var(--bg-main-gray) 100%);
+}
 
 .disable-select {
     -webkit-user-select: none;
