--- a/Views/css/main-button-styles.css
+++ b/Views/css/main-button-styles.css
@@ -9,7 +9,7 @@ button {
     background-image: var(--btn-main-grad);
     border-radius: 4px;
     box-sizing: border-box;
-    box-shadow: inset 0 0px 4px 1px #626262;
+    /* box-shadow: inset 0 0px 4px 1px #626262; */
     min-height: 30px;
     color: var(--text-color);
     cursor: pointer;
@@ -57,4 +57,14 @@ button {
 .button_main:focus {
     box-shadow: rgba(131, 192, 253, 0.5) 0 0 0 1px;
     outline: none;
+}
+
+
+#d-user-btn-cont {
+    display: flex;
+}
+
+#b-user-arrow::after {
+    font-weight: bold;
+    content: '\203A';
 }
