--- a/Views/css/usracc-modal.css
+++ b/Views/css/usracc-modal.css
@@ -8,8 +8,8 @@
     top: 14px;
     width: 340px;
     height: 400px;
-    box-shadow: inset 0 0 4px 3px #42A1ECFF;
-    background: linear-gradient(to top, snow 75%, rgb(53, 53, 53) 75%,var(--bg-main-gray) 76%, var(--bg-main-gray) 100%);
+    box-shadow: var(--box-shadow-main);
+    background: var(--bg-user-modal);
 }
 
 
@@ -26,16 +26,6 @@
     transition-property: opacity, transform, overlay, display;
     transition-duration: 0.3s;
     transition-behavior: allow-discrete;
-    /* Using the shorthand transition property, we could write:
-      transition: 
-        opacity 0.7s,
-        transform 0.7s,
-        overlay 0.7s allow-discrete,
-        display 0.7s allow-discrete;
-  
-      or even:
-      transition: all 0.7s allow-discrete;
-    */
   }
   
   /* Needs to be included after the previous [popover]:popover-open 
