obrazek profilu do modalu 2

--- a/Views/css/usracc-modal.css
+++ b/Views/css/usracc-modal.css
@@ -1,4 +1,5 @@
 .usracc_modal {
+    display: flex;
     position: absolute;
     border-radius: 0.5rem;
     border: 0px;
@@ -16,9 +17,10 @@
 [popover]:popover-open {
     opacity: 1;
     transform: scaleX(1);
-  }
+}
   
-  [popover] {
+
+[popover] {
     /* Final state of the exit animation */
     opacity: 0;
     transform: scaleX(0.9);
@@ -26,13 +28,14 @@
     transition-property: opacity, transform, overlay, display;
     transition-duration: 0.3s;
     transition-behavior: allow-discrete;
+}
+ 
+
+/* Needs to be included after the previous [popover]:popover-open 
+    rule to take effect, as the specificity is the same */
+@starting-style {
+  [popover]:popover-open {
+    opacity: 0;
+    transform: scaleX(0.9);
   }
-  
-  /* Needs to be included after the previous [popover]:popover-open 
-     rule to take effect, as the specificity is the same */
-  @starting-style {
-    [popover]:popover-open {
-      opacity: 0;
-      transform: scaleX(0.9);
-    }
-  }
+}
