--- a/Views/css/main-styles.css
+++ b/Views/css/main-styles.css
@@ -39,7 +39,7 @@ body {
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
-    height: 9.5%;
+    height: 8.5%;
     width: 100%;
     gap: 0.4rem;
     padding-block: 0.5em;
@@ -129,6 +129,7 @@ div.central-bottom
     height: 91%;
     content: url("/Playlist/images/colorful-headphones.jpg");
     background-size: cover;
+    user-select: none;
 } 
 
 /*<!----------------------------- PRAVÁ NAVIGACE ------------------------------->*/
@@ -160,7 +161,3 @@ div.central-bottom
 }
 
 /*===================================== ID`s ====================================*/
-
-#d-user-btn-cont {
-    width: 89%;
-}
