--- a/Views/css/usracc-modal.css
+++ b/Views/css/usracc-modal.css
@@ -1,5 +1,7 @@
 .usracc_modal {
     display: flex;
+    flex-direction: column;
+    align-items: center;
     position: absolute;
     border-radius: 0.5rem;
     border: 0px;
@@ -9,6 +11,24 @@
     top: 14px;
     width: 340px;
     height: 400px;
+    box-shadow: var(--box-shadow-main);
+    background: var(--bg-user-modal);
+}
+
+.add_pict_modal {
+    background-color: chartreuse;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: absolute;
+    border-radius: 0.5rem;
+    border: 0px;
+    z-index: 1;
+    margin: 0%;
+    left: 19vw;
+    top: 14px;
+    width: 500px;
+    height: 700px;
     box-shadow: var(--box-shadow-main);
     background: var(--bg-user-modal);
 }
@@ -38,4 +58,28 @@
     opacity: 0;
     transform: scaleX(0.9);
   }
+}
+
+
+#b-user-foto {
+    background-color: white;
+    width: 100px;
+    height: 100px;
+    border-radius: 100px;
+    border: 0px;
+    margin-top: 12%;
+    padding: 0;
+}
+
+
+#i-user-foto {
+    content: url("/Playlist/images/account_circle_48dp_5F6368_FILL0_wght200_GRAD0_opsz48.svg"); 
+}
+
+
+.text_area {
+    background-color: aqua;
+    width: 100%;
+    height: 50%;
+    user-select: none;
 }
