--- a/Views/css/usracc-modal.css
+++ b/Views/css/usracc-modal.css
@@ -16,11 +16,7 @@
 }
 
 .add_pict_modal {
-    background-color: chartreuse;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    position: absolute;
+    position: relative;
     border-radius: 0.5rem;
     border: 0px;
     z-index: 1;
