css predelano na Scale and layout 100%

--- a/Views/css/usracc-modal.css
+++ b/Views/css/usracc-modal.css
@@ -9,8 +9,8 @@
     margin: 0%;
     left: 19vw;
     top: 14px;
-    width: 340px;
-    height: 400px;
+    width: 26vw;
+    height: 70vh;
     box-shadow: var(--box-shadow-main);
     background: var(--bg-user-modal);
 }
@@ -46,7 +46,7 @@
     height: 100px;
     border-radius: 100px;
     border: 0px;
-    margin-top: 12%;
+    margin-top: 21%;
     padding: 0;
 }
 
