--- a/Views/css/main-button-styles.css
+++ b/Views/css/main-button-styles.css
@@ -2,19 +2,17 @@ button {
     min-height: 30.82px;
 }
 
-.button_main {
 
-    /*font-family: "Helvetica Neue","Helvetica,Arial",system-ui,sans-serif;*/
+.button_main {
     font-family: "Franklin Gothic Book";
     background-image: var(--btn-main-grad);
     border-radius: 4px;
     box-sizing: border-box;
-    /* box-shadow: inset 0 0px 4px 1px #626262; */
     min-height: 30px;
     color: var(--text-color);
     cursor: pointer;
     display: block;
-    font-size: 0.8em;
+    font-size: 1.2em;
     font-weight: 400;
     line-height: 1.47059;
     min-width: 30px;
@@ -29,7 +27,7 @@ button {
 
 
 .width {
-    width: 89%;
+    width: 94%;
 }
 
 
@@ -62,8 +60,18 @@ button {
 
 #d-user-btn-cont {
     display: flex;
-    width: 89%;
 }
+
+
+#b-user-btn {
+    width: 88%;
+}
+
+
+#b-user-arrow {
+    width: 12%;
+}
+
 
 #b-user-arrow::after {
     font-weight: bold;
