--- a/Views/css/main-styles.css
+++ b/Views/css/main-styles.css
@@ -39,7 +39,8 @@ body {
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
-    height: 8.7%;
+    min-height: 57px;
+    height: 7.4%;
     width: 100%;
     gap: 0.4rem;
     padding-block: 0.5em;
@@ -86,9 +87,7 @@ body {
     flex-direction: column;
     height: 100%;
     width: 100%;
-    padding-block: 0.6em;
-    padding-right: 0.5rem;
-    padding-left: 0.2rem;
+    padding-block: 4%;
     border-radius: 0.5rem;
     overflow-x: hidden;
     background-color: var(--bg-main-gray);
