--- a/Views/css/slot-styles.css
+++ b/Views/css/slot-styles.css
@@ -4,10 +4,18 @@
     box-sizing: border-box;
 }
 
+
+#d-cover-cont {
+    width: 100px;
+    height: 100px;
+}
+
+
 .playlist-img {
-    height: 70px;
-    width: 70px;
-    border-radius: 4px;
+    width: inherit;
+    height: inherit;
+    border-radius: 0.3em;
+    object-fit: fill;
 }
 
 
@@ -24,11 +32,11 @@
 .playlist-main {
     display: flex;
     flex-direction: column;
-    height: 100% ;
+    height: 100%;
     padding-top: 0.5rem;
     padding-bottom: 0.3rem;
     padding-inline: 0.5rem;
-    font-family: 'Quicksand', sans-serif ;
+    font-family: 'Quicksand', sans-serif;
     border-radius: 0.5rem;
     box-shadow: var(--box-shadow-main);
     overflow-x: hidden;
@@ -48,14 +56,16 @@
 
 /*celý kontent <li>*/
 .playlist-item {
+    min-height: 100px;
+    max-height: 100px;
     box-sizing: content-box;
-    gap: 0 9px ;
+    gap: 0 9px;
     display: flex;
     align-items: center;
     margin-right: 1.5%;
-    margin-bottom: .5em ;
-    padding: .2em 0.4em .3em 0.3em;
-    border-bottom: .1em solid #d8d8d859 ;
+    margin-bottom: .5em;
+    padding: 0.5em 0.4em 0.4em 0.3em;
+    border-bottom: .1em solid #d8d8d859;
     border-radius: 6px;
     background-color: var(--bg-main-gray);
     overflow: hidden;
@@ -64,6 +74,10 @@
 
 
 .slot-text-area {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    width: 60%;
     display: flex;
     flex-direction: column;
 }
@@ -72,12 +86,13 @@
 .inlineFlex {
     display: flex;
     justify-content: space-between;
-    width: 200px;
+    width: 100%;
+    flex-wrap: nowrap;
 }
 
 
 .track-name {
-    font-size: 0.8em ;
+    font-size: 1.1em;
     color: var(--track-name-color);
     font-family: "Franklin Gothic Book";
     text-shadow: 1px 1px #2d2c2c;
@@ -91,7 +106,7 @@ table {
 
 
 .td-title {
-    font-size: 0.7em ;
+    font-size: 1em;
     color: var(--td-title-color);
     font-family: "Franklin Gothic Book";
     margin-top: 2px;
@@ -99,7 +114,8 @@ table {
 
 
 .td-genre {
-    font-size: 0.7em ;
+    text-overflow: ellipsis;
+    font-size: 0.9em;
     color: #b2b2b2;
     font-family: "Franklin Gothic Book";
     margin-top: 2px;
@@ -109,9 +125,9 @@ table {
 .td-track-time {
     margin-left: 25px;
     margin-top: 2px;
-    font-size: .6em ;
+    font-size: 0.8em;
     /*color: #f3f3f3;*/
-    height: fit-content ;
+    height: fit-content;
     align-self: flex-end;
     font-family: system-ui;
     color: var(--track-time-color);
