--- a/Views/css/crop.css
+++ b/Views/css/crop.css
@@ -7,8 +7,7 @@
 
 #crop-controls {
     display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: space-between;
 }
 
 #crop-container {
