du pridat vkladani user images

--- a/Views/css/disclosure-styles.css
+++ b/Views/css/disclosure-styles.css
@@ -91,5 +91,5 @@ details li {
     text-overflow: ellipsis;
     width: 90%;
     white-space: nowrap; /* prevent text wrapping */
-    overflow: hidden; /* hide overflow */
+    overflow: hidden;
 }
